# chess

./: .clang-format  CMakeLists.txt
include/: board.h  config.h  piece.h  position.h  types.h
src/: board.cpp  main.cpp  piece.cpp
